feat: Edited search endpoints in BlogController.